Added handling of redirect Result for Auth. Added support for cloud pods by changing pod URL in web.config.

--- a/API_Demo/Web.config
+++ b/API_Demo/Web.config
@@ -10,17 +10,17 @@
   </configSections>
   <appSettings>
     <add key="CentPodURL" value="https://kibble.centrify.com"/>
-    <add key="CentLoginURL" value="https://kibble.centrify.com/security/login"/>
-    <add key="CentLogOutURL" value="https://kibble.centrify.com/security/Logout"/>
-    <add key="CentStartAuthURL" value="https://kibble.centrify.com/Security/StartAuthentication"/>
-    <add key="CentAdvanceAuthURL" value="https://kibble.centrify.com/Security/AdvanceAuthentication"/>
-    <add key="CentGetAppsURL" value="https://kibble.centrify.com/uprest/GetUPData"/>
-    <add key="CentRunAppURL" value="https://kibble.centrify.com/run?appkey="/>
-    <add key="CentCreateUserURL" value="https://kibble.centrify.com/cdirectoryservice/createuser"/>
-    <add key="CentQueryURL" value="https://kibble.centrify.com/RedRock/query"/>
-    <add key="CentChangeUserURL" value="https://kibble.centrify.com/cdirectoryservice/changeuser"/>
-    <add key="CentSetUserURL" value="https://kibble.centrify.com/cdirectoryservice/SetUserState"/>
-    <add key="CentSetPassURL" value="https://kibble.centrify.com/UserMgmt/ResetUserPassword"/>
+    <add key="CentLoginURL" value="/security/login"/>
+    <add key="CentLogOutURL" value="/security/Logout"/>
+    <add key="CentStartAuthURL" value="/Security/StartAuthentication"/>
+    <add key="CentAdvanceAuthURL" value="/Security/AdvanceAuthentication"/>
+    <add key="CentGetAppsURL" value="/uprest/GetUPData"/>
+    <add key="CentRunAppURL" value="/run?appkey="/>
+    <add key="CentCreateUserURL" value="/cdirectoryservice/createuser"/>
+    <add key="CentQueryURL" value="/RedRock/query"/>
+    <add key="CentChangeUserURL" value="/cdirectoryservice/changeuser"/>
+    <add key="CentSetUserURL" value="/cdirectoryservice/SetUserState"/>
+    <add key="CentSetPassURL" value="/UserMgmt/ResetUserPassword"/>
   </appSettings>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-API_Demo-aff8ecbe-80ce-4426-819e-c02f922e75e8;AttachDbFilename=|DataDirectory|\aspnet-API_Demo-aff8ecbe-80ce-4426-819e-c02f922e75e8.mdf;Integrated Security=SSPI" providerName="System.Data.SqlClient"/>
