Added My Account page for user self service (change profile, reset password, set secret question). Added Create Role and Add User to Role in Manage page.

--- a/API_Demo/Web.config
+++ b/API_Demo/Web.config
@@ -21,6 +21,12 @@
     <add key="CentChangeUserURL" value="/cdirectoryservice/changeuser"/>
     <add key="CentSetUserURL" value="/cdirectoryservice/SetUserState"/>
     <add key="CentSetPassURL" value="/UserMgmt/ResetUserPassword"/>
+    <add key="CentGetUserAttributesURL" value="/UserMgmt/GetUserAttributes"/>
+    <add key="CentSetSecurityQuestionURL" value="/UserMgmt/SetSecurityQuestion"/>
+    <add key="CentStoreRoleURL" value="/saasManage/StoreRole"/>
+    <add key="CentGetRoleMemebersURL" value="/saasManage/GetRoleMembers"/>
+    <add key="CentUpdateRoleURL" value="/saasManage/UpdateRole"/>
+ 
   </appSettings>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-API_Demo-aff8ecbe-80ce-4426-819e-c02f922e75e8;AttachDbFilename=|DataDirectory|\aspnet-API_Demo-aff8ecbe-80ce-4426-819e-c02f922e75e8.mdf;Integrated Security=SSPI" providerName="System.Data.SqlClient"/>
